--- a/Bootstrap/Gallery.html
+++ b/Bootstrap/Gallery.html
@@ -35,7 +35,7 @@
           </div>
     </div>
   </div>
-  
+  <h1>Added to git</h1>
      
 </body>
 <script src="js/bootstrap.bundle.js"></script>
